deploy/kind-coding/manifests/overlays/gke-autopilot/migrate/migrator.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wardby-migrate
  namespace: wardby-coding
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: wardby-migrate
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 169.254.20.10/32
        - ipBlock:
            cidr: 169.254.169.254/32
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: wardby-database-cidr
      ports:
        - protocol: TCP
          port: 3307
    - to:
        - ipBlock:
            cidr: 169.254.169.254/32
        - ipBlock:
            cidr: 169.254.169.252/32
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 988
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
              - 169.254.0.0/16
              - 100.64.0.0/10
      ports:
        - protocol: TCP
          port: 443
